# Inventory-system

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: pipeline.yml
cmake/: clang-format.cmake  cppcheck.cmake  fileLists.cmake  flags.cmake  pre-commit-check.cmake
src/llgame/: Container.hpp  Slot.hpp
utest/: CMakeLists.txt  Container_test.cpp  ItemMock.hpp  Slot_test.cpp  main.cpp
